@@ -8,6 +8,7 @@ Bugs fixed
 * Fix filenames were not shown on warnings of citations
 * Fix line numbers was not shown on warnings in LaTeX and texinfo builders
 * Fix line numbers was not shown on warnings of indecies
+* #2026: Fix LaTeX builder rais error if parsed-literal includes links
 
 Release 1.3.4 (released Jan 12, 2016)
 =====================================
